# snaplint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/snaplint/: cli.py  diff.py  errors.py  models.py  parse.py  render.py  snapshot.py
tests/: test_cli.py  test_diff.py  test_e2e.py  test_line_zero.py  test_parse.py
