[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaplint"
version = "0.1.0"
description = "A tiny, zero-config CLI to snapshot current linter findings and later diff new runs against that snapshot."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Gemini", email = "gemini@google.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/gemini/snaplint"

[project.scripts]
snaplint = "snaplint.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snaplint"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B905"] # `zip()` without `strict=`. In this project, the inputs are trusted.

[tool.mypy]
strict = true
