[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaplint"
version = "0.6.0"
description = "Snapshot linter errors and track only new issues — perfect for incremental linter adoption on large codebases"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "GENWAY AI", email = "contact@genway.ai" },
]
keywords = [
  "linter",
  "lint",
  "ci",
  "baseline",
  "snapshot",
  "diff",
  "flake8",
  "mypy",
  "pylint",
  "code-quality",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "black",
  "flake8",
]

[project.urls]
Homepage = "https://github.com/GENWAY-AI/snaplint"
Repository = "https://github.com/GENWAY-AI/snaplint"
Issues = "https://github.com/GENWAY-AI/snaplint/issues"
Changelog = "https://github.com/GENWAY-AI/snaplint/releases"

[project.scripts]
snaplint = "snaplint.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snaplint"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B905"] # `zip()` without `strict=`. In this project, the inputs are trusted.

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]  # Allow long lines in test files

[tool.mypy]
strict = true
